--- a/css/styles.css
+++ b/css/styles.css
@@ -191,22 +191,56 @@
 /* end pt-sans */
 body {
   font-family: 'Pt Sans';
-  font-size: 24px;
+  font-size: 30px;
   font-style: normal;
   font-weight: 400;
   background-color: rgba(177,48,50,1.0);
   color: rgba(67,37,29,1.0);
+  /* margin: 0% 0% 0% 0%;
+  padding: 0% 0% 0% 0%; */
 }
 nav {
-  background-image: url("../img/redLogo.png");
-  background-position: center;
-  background-size: 30%;
+  background-image: url("../img/portfolioPictureColor.png");
+  background-repeat: no-repeat;
+  background-position: 0px 0px;
+  background-size: 25%;
+  /* border-bottom: 2px solid rgba(225, 210, 174, 0.25); */
+}
+nav img {
+  width: 50%;
+  margin: 5% 0 0 25%;
+}
+.intro {
+  padding: 2.5% 10% 0 10%;
 }
 .intro p {
-    margin: 1em 0 0 1em;
+    margin: 0 0 .5em 0;
+}
+.title {
+  font-size: .85em;
+  margin: 0 0 0 0;
+  padding: .25em .25em .25em 1em;
+  color: rgba(67,37,29,1.0);
+  background-image: linear-gradient(to right, rgba(67,37,29,0.25),rgba(67,37,29,0.0), rgba(177,48,50,1.0));
+}
+.title p {
+  margin: 0;
+  padding: 0;
+}
+.asteric {
+  font-size: .85em;
+}
+.titleCaps {
+  text-transform: uppercase;
+  font-size: .75em;
+}
+.gallery {
+  margin: -10% 0 0 0;
+  padding: 10%;
 }
 .gallery img {
   width: 30%;
+  margin: 1em 1em 0 0;
 }
 
 /* Akzidenz Grotesk Converted */
